content/vault/v1.21.x/content/docs/deploy/kubernetes/kms/rotate-kek.mdx
---
layout: docs
page_title: Rotate Vault Kubernetes Key Management KEK
description: >-
  Rotate the KEK for Vault Kubernetes Key Management
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-03-17T12:26:00-07:00
last_modified: 2026-03-20T22:19:21.000Z
# END AUTO GENERATED METADATA
---

# Rotate the key encryption key

@include '../../../global/partials/alerts/status/beta.mdx'

You can rotate the KEK in Vault without restarting the `vault-kube-kms` process or the
Kubernetes API server. During the rotation process, the `vault-kube-kms` process emits
log entries indicating that it observed a new Transit key version along with the
results of encryption operations using the new key version.


<Warning title="Consider minimum version updates carefully">

  Changing `min_decryption_version` for the Transit plugin can prevent Kubernetes
  from reading data encrypted with older key versions. Always ensure
  `min_decryption_version` includes the oldest key version currently in-use by
  your Kubernetes cluster.

</Warning>

To rotate the KEK, call the Transit rotate endpoint with the key name configured
for the `vault-kube-kms` process:

```shell-session
$ vault write -f <mount_path>/keys/<key_name>/rotate
```

For example:

<CodeBlockConfig hideClipboard>

```shell-session
$ vault write -f k8s-transit/keys/kms-kek/rotate
```

</CodeBlockConfig>

Vault creates a new version of the key while retaining previous versions for
decryption. Once you rotate the key in Vault:

1. The `vault-kube-kms` process automatically detects the new Transit key version.
1. Within a few minutes of rotation, the `vault-kube-kms` process updates the active key
   version used for encryption.
1. The Kubernetes API server encrypts the new DEK using the latest key version.
   Refer to the Kubernetes doc,
   [Understanding key_id and Key Rotation][k8s_rotation]
   for more details on the timing.
1. Existing encrypted DEKs remain decryptable using older key versions.


[k8s_rotation]: https://kubernetes.io/docs/tasks/administer-cluster/kms-provider/#developing-a-kms-plugin-gRPC-server-notes-kms-v2